--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -72,7 +72,10 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.svg
+    - assets/logo2.svg
     - assets/selfie.png
+    - assets/back.png
+    - assets/backprofile.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
